<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <Button
        android:id="@+id/buttonOnePlayer"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/button_one_player"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwoPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTittleGame" />

    <Button
        android:id="@+id/buttonTwoPlayers"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="284dp"
        android:text="@string/button_two_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonOnePlayer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonOnePlayer"
        app:layout_constraintTop_toBottomOf="@+id/buttonOnePlayer" />

    <TextView
        android:id="@+id/textViewTittleGame"
        android:layout_width="277dp"
        android:layout_height="0dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="173dp"
        android:text="@string/text_view_tittle_game"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOnePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>